--- a/locales/da.json
+++ b/locales/da.json
@@ -105,6 +105,7 @@
     "fr": "Fransk",
     "gd": "Gælisk (Skotsk)",
     "hi": "Hindi",
+	"he": "Hebraisk",
     "it": "Italiensk",
     "ja": "Japansk",
     "ko": "Koreansk",
@@ -142,7 +143,7 @@
       },
       "more": "Vis mere",
       "less": "Vis mindre",
-      "adverts": "Indeholder funktioner der er låst bag andre tjenester",
+      "adverts": "Indeholder reklamer og funktioner der er låst bag andre tjenester",
       "inAppPurchases": "Has in-app purchases",
       "nsfw": "NSFW",
       "offeredby": "Indsendt af:",
@@ -255,7 +256,7 @@
       "images": {
         "title": "Udseende",
         "avatar": {
-          "title": "Avatar URL",
+          "title": "Link til avatar",
           "placeholder": "Et HTTPS-link til et billede der bruges som avatar"
         },
         "cover": {
@@ -323,6 +324,10 @@
       "avatars": "Download alle avatarer",
       "tokens": "Nulstil alle tokens",
       "queue": "Vis kø"
+	  "state": {
+        "reason": "Indtast en begrundelse for ændring af bottens status",
+        "change": "Ændre status"
+      }
     }
   },
   "pagination": {
@@ -371,6 +376,8 @@
     "description": "ls.terminal.ink is an application store for Discord bots. Install applications for music, news, moderation and more for your server."
   },
   "states": {
-    "queue": "Ikke verificeret"
+	"approved": "Godkendt",
+    "denied": "Afvist",
+    "queue": "I kø"
   }
 }
